# Secure_CLI_Password_Manager_Cybersecurity_PythonEngineering

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README_PYPI.md  SECURITY.md  bunker.spec  demo.ipynb  docker-compose.yml  index.html  irondome-cli.spec  irondome.spec  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: build-binaries.yml  deploy.yml  publish.yml
packaging/docker/: .env.example  Caddyfile  irondome_serve_web.py
packaging/docker/caddy/: Dockerfile
packaging/pyinstaller/: bunker_cli.py  irondome_cli.py  irondome_tui.py
password_manager/: __init__.py  __main__.py  airspace.py  auth.py  biometric.py  cli.py  constants.py  encryption.py  generator.py  keystore.py  logger.py  manager.py  session.py  settings.py  storage.py  utils.py
password_manager/tui/: README.md  __init__.py  app.py  ascii_art.py  irondome.tcss  theme.py
password_manager/tui/screens/: backup.py  confirm.py  dashboard.py  detail.py  edit.py  generator.py  help.py  login.py  reauth.py  save.py  settings.py  setup.py  splash.py  status.py  vault.py
password_manager/tui/security/: __init__.py  cleanup.py  clipboard.py  memory.py
password_manager/tui/state/: app_state.py  events.py
password_manager/tui/widgets/: biometric_modal.py  lock_overlay.py  logo.py  status_bar.py  strength_meter.py  vault_table.py
scripts/: build_binaries.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt  site.webmanifest  sw.js
website/src/components/: ClassificationBadge.astro  CodeBlock.astro  FeatureCard.astro  Footer.astro  Header.astro  InstallBox.astro  SectionDivider.astro  StatBar.astro  TacticalHeading.astro  Terminal.astro  TerminalDemo.astro
website/src/components/sections/: About.astro  BadgesStats.astro  Comparison.astro  CryptoPrimitives.astro  Disclosure.astro  FeaturesGrid.astro  FileSystem.astro  FinalCTA.astro  Hero.astro  HowItWorks.astro  OpenSourceBadge.astro  Philosophy.astro  QuickStart.astro  SecurityArch.astro  TerminalDemo.astro  ThreatModel.astro  Troubleshooting.astro  WhyIronDome.astro  ZeroKnowledge.astro
website/src/layouts/: Layout.astro
website/src/pages/: 404.astro  about.astro  docs.astro  features.astro  index.astro  security.astro
website/src/scripts/: animations.js
website/src/styles/: animations.css  global.css
