[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "IronDome"
dynamic = ["version"]
description = "IronDome — Fortified CLI vault with AES-256 encryption, biometric auth, and zero-knowledge architecture"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.8"
authors = [
    { name = "King Hippopotamus" },
]
keywords = [
    "password-manager", "encryption", "aes-256", "security", "cli",
    "cybersecurity", "zero-knowledge", "password-generator", "vault",
    "credential-manager", "fernet", "pbkdf2", "irondome", "bunker",
    "biometric", "touch-id", "windows-hello", "fingerprint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=36.0.0",
    "keyring>=23.0.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-LocalAuthentication>=9.0"]

[project.scripts]
bunker = "password_manager.cli:bunker_main"
irondome = "password_manager.cli:irondome_main"

[project.urls]
Homepage = "https://github.com/TheKingHippopotamus/IronDome-Bunker"
Repository = "https://github.com/TheKingHippopotamus/IronDome-Bunker"
Issues = "https://github.com/TheKingHippopotamus/IronDome-Bunker/issues"

[tool.setuptools.dynamic]
version = {attr = "password_manager.__version__"}

[tool.setuptools.packages.find]
include = ["password_manager*"]
