[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "IronDome"
dynamic = ["version"]
description = "IronDome — Fortified password vault with TUI, AES-256 encryption, biometric auth, and zero-knowledge architecture"
readme = "README_PYPI.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.8"
authors = [
    { name = "King Hippopotamus" },
]
keywords = [
    "password-manager", "encryption", "aes-256", "security", "cli", "tui",
    "cybersecurity", "zero-knowledge", "password-generator", "vault",
    "credential-manager", "fernet", "pbkdf2", "irondome", "bunker",
    "biometric", "touch-id", "windows-hello", "fingerprint",
    "terminal-ui", "textual", "cross-platform", "macos", "linux", "windows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Framework :: Textual",
]
dependencies = [
    "cryptography>=36.0.0",
    "keyring>=23.0.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-LocalAuthentication>=9.0"]

[project.scripts]
irondome = "password_manager.tui.app:main"
irondome-cli = "password_manager.cli:irondome_main"
bunker = "password_manager.cli:bunker_main"

[project.urls]
Homepage = "https://thekinghippopotamus.github.io/IronDome-Bunker/"
Documentation = "https://thekinghippopotamus.github.io/IronDome-Bunker/docs"
Repository = "https://github.com/TheKingHippopotamus/IronDome-Bunker"
Issues = "https://github.com/TheKingHippopotamus/IronDome-Bunker/issues"
Changelog = "https://github.com/TheKingHippopotamus/IronDome-Bunker/releases"
"Security Policy" = "https://github.com/TheKingHippopotamus/IronDome-Bunker/blob/main/SECURITY.md"
"Live Demo" = "https://colab.research.google.com/github/TheKingHippopotamus/IronDome-Bunker/blob/main/demo.ipynb"

[tool.setuptools.dynamic]
version = {attr = "password_manager.__version__"}

[tool.setuptools.packages.find]
include = ["password_manager*"]
